Move to java 10