@@ -1,8 +1,8 @@
 package org.rulez.demokracia.pdengine;
 
 import static org.junit.Assert.*;
-import java.util.Arrays;
 import java.util.Collection;
+import java.util.List;
 import java.util.Set;
 
 import org.junit.Before;
@@ -11,8 +11,6 @@ import org.rulez.demokracia.pdengine.annotations.TestedBehaviour;
 import org.rulez.demokracia.pdengine.annotations.TestedFeature;
 import org.rulez.demokracia.pdengine.annotations.TestedOperation;
 import org.rulez.demokracia.pdengine.testhelpers.CreatedBeatTable;
-
-import com.google.common.collect.Sets;
 
 @TestedFeature("Vote")
 @TestedOperation("calculate winners")
@@ -28,7 +26,7 @@ public class BeatTableIgnoreTest extends CreatedBeatTable {
 		super.setUp();
 		createNewBeatTableWithComplexData();
 		BeatTableIgnore beatTableIgnore = new BeatTableIgnoreImpl();
-		ignoredChoices = Arrays.asList("name1", "name2");
+		ignoredChoices = List.of("name1", "name2");
 		ignoredBeatTable = beatTableIgnore.ignoreChoices(beatTable, ignoredChoices);
 	}
 
@@ -39,12 +37,12 @@ public class BeatTableIgnoreTest extends CreatedBeatTable {
 
 	@Test
 	public void ignore_choices_returns_the_not_ignored_choices() {
-		assertEquals(Sets.newHashSet("name3"), Sets.newHashSet(ignoredBeatTable.getKeyCollection()));
+		assertEquals(Set.of("name3"), Set.copyOf(ignoredBeatTable.getKeyCollection()));
 	}
 
 	@Test
 	public void ignore_choices_copies_every_not_ignored_pairs() {
-		assertBeatsEqualsInSubset(beatTable, ignoredBeatTable, Sets.newHashSet("name3"));
+		assertBeatsEqualsInSubset(beatTable, ignoredBeatTable, Set.of("name3"));
 	}
 
 	private void assertBeatsEqualsInSubset(final BeatTable table1, final BeatTable table2,
@@ -58,6 +56,6 @@ public class BeatTableIgnoreTest extends CreatedBeatTable {
 	}
 
 	private void assertIntersectionIsEmpty(final Collection<String> collection1, final Collection<String> collection2) {
-		assertTrue(Sets.intersection(Sets.newHashSet(collection1), Sets.newHashSet(collection2)).isEmpty());
+		assertFalse(Set.copyOf(collection1).stream().anyMatch(Set.copyOf(collection2)::contains));
 	}
 }
